# simple-dear-imgui

./: ChangeLog.md  README.md  flake.nix  simple-dear-imgui.cabal
app/: Main.hs
src/: SimpleDearImGui.hs  SimpleDearImgui.hs
src/SimpleDearImGui/: Controller.hs  Core.hs  Texture.hs
